k8s-deploy/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yuzu-web
spec:
  selector:
    app: yuzu-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
